# ai-service

e-love-ai-service/: Dockerfile  README.md  Taskfile.yml  compose.yml  main.py  pyproject.toml
e-love-ai-service/config/: app_factory.py  app_instance.py  categories.json  config.py
e-love-ai-service/data/raw/: raw_data.csv
e-love-ai-service/dependencies/recommend_users_service/: create_recommend_users_service.py
e-love-ai-service/easter_eggs/: greeting.py
e-love-ai-service/scripts/: user_data.py
e-love-ai-service/src/: embeddings.py  inference.py  recomendations.py  training.py
e-love-ai-service/src/api/v1/endpoints/recommend_users/: recommend_users.py
e-love-ai-service/src/api/v1/endpoints/upload_users_data/: upload_users_data.py
e-love-ai-service/src/api/v1/router/: router.py
e-love-ai-service/src/api/v1/upload_users_data/: upload_users_data.py
e-love-ai-service/src/services/reccomend_for_user/: reccomend_for_user.py
e-love-ai-service/src/services/return_users_data_service/: return_processed_data_service.py
e-love-ai-service/src/services/users_data_service/: users_data_service.py
e-love-ai-service/src/types/user/: user_type.py
