[tool.poetry]
name = "e-love-ai-service"
version = "0.1.0"
description = ""
authors = ["paketoff <kekisreal228@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
pandas = "^2.2.3"
torch = "^2.5.1"
sentence-transformers = "^3.3.1"
scikit-learn = "^1.6.0"
transformers = "^4.47.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
